@@ -1,3 +1,8 @@
+Thu May 21 10:51:54 2015  Jake Worth  <jakeworth82@gmail.com>
+
+	* io.c (rb_f_select): [DOC] Fixes for grammar and style.
+	  [Fix GH-906]
+
 Thu May 21 08:25:19 2015  Eric Wong  <e@80x24.org>
 
 	* variable.c (Init_var_tables): init generic_iv_tbl
